add base64 texture as txt file and load with webpack raw loader

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
-    "lodash": "^4.15.0"
+    "lodash": "^4.15.0",
+    "raw-loader": "^0.5.1"
   }
 }
